# pamfilico-python-sse

./: Dockerfile.test  README.md  docker-compose.test.yml  pyproject.toml  run-tests.sh
.github/workflows/: test.yml
cookiecutter/: cookiecutter.json
cookiecutter/{{cookiecutter.project_slug}}/: .env.example  README.md
cookiecutter/{{cookiecutter.project_slug}}/backend/app/services/sse/: __init__.py  events.py
pamfilico_python_sse/: __init__.py  emitter.py  json_stream.py
pamfilico_python_sse/tests/: test_emitter.py  test_emitter_redis.py  test_integration.py  test_integration_redis.py  test_json_stream.py  test_server.py
