[tool.poetry]
name = "pamfilico-python-sse"
version = "0.1.0"
description = "Server-Sent Events emitter for Flask backends — POST events to a Next.js SSE trigger endpoint"
authors = ["Pamfilico"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = ">=2.28.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
flask = ">=2.0.0"
commitizen = "^4.9.1"
cookiecutter = ">=2.0.0"

[tool.pytest.ini_options]
testpaths = ["pamfilico_python_sse/tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version"
]
update_changelog_on_bump = true
tag_format = "v$version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
